# caner

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  app.py  comment_translation.py  crondebug.sh  data_fetcher.py  data_loader.py  demo_fix.py  deploy_if_changed.sh  docker-compose.remote.yml  docker-compose.yml  fetch_meal_translations.py  fetch_mps_scores.py  gunicorn.conf.py  i18n.py  main.py  meal_image_cache.py  meal_image_lookup_cache.py  meal_translation.py  menu_refresh.py  migrate_db.py  models.py  mps_scoring.py  pyproject.toml  requirements.txt  run_data_fecher.sh  run_data_fetcher.sh  run_gunicorn.sh  schema.py  studifutter.py  supervisord.conf  test_dark_caner_sambal.py  test_downloads.py  test_duplicate_meals.py  (+7 more)
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html
test_venv/: pyvenv.cfg
tests/: test_data_loader.py  test_i18n.py  test_meal_image_cache.py  test_meal_image_lookup_cache.py  test_meal_translation.py  test_menu_refresh.py  test_mps_scoring_config.py  test_studifutter.py
utils/: xml_parser.py
