[project]
name = "caner"
version = "0.1.0"
description = "LUH mensa menu ranking and recommendation app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "dotenv==0.9.9",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "gevent==25.5.1",
    "greenlet==3.2.2",
    "gunicorn==23.0.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "markdown2",
    "packaging==25.0",
    "pillow",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "setuptools==80.4.0",
    "sqlalchemy==2.0.40",
    "tqdm",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "zope-event==5.0",
    "zope-interface==7.2",
]

[tool.djlint]
profile = "jinja"
ignore = [
    "H021",
    "H006",
    "H030",
    "H031"
]
